Darken toc text and lighten background

--- a/docs/_static/custom.css
+++ b/docs/_static/custom.css
@@ -1,7 +1,11 @@
+/* override text color */
+.wy-menu-vertical a {
+    color: #000000;
+}
 
 /* Sidebar background color */
 .wy-nav-side, div.wy-side-nav-search {
-  background-color: rgb(38, 34, 98, 0); /* full alpha */
+  background-color: rgb(198, 197, 213, 0); /* full alpha */
 }
 
 /* Sidebar link click color */
